fix(#30) fix carousel not responsive issue (#31)
* fix(#30) fix carousel not responsive issue

- Fix demo app mobile view layout issue

Closes #30 #20

* fix(#30) fix travis test

* 1.3.8

--- a/demo/app/app.component.css
+++ b/demo/app/app.component.css
@@ -4,19 +4,3 @@
   font-family: Roboto,"Helvetica Neue";
 }
 
-.content {
-  margin: 50px 70px;
-}
-
-@media screen and (min-width: 600px) and (max-width: 1279px) {
-  .content {
-    margin: 20px 30px;
-  }
-}
-
-@media screen and (max-width: 599px) {
-  .content {
-    margin: 8px 12px;
-  }
-}
-
